--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -15,7 +15,12 @@
         <view class="other_info">
           <view class="identity" wx:if="{{userInfo.roleType === '2'}}">
             <view class="identity_icon">
-              <image class="icon_img" src="/assets/images/xc.png"/>
+              <!-- <image class="icon_img" src="/assets/images/xc.png"/> -->
+              <image class="icon_img" wx:if="{{userInfo.userLevel === '执法学徒'}}" src="/assets/images/level/学徒.png"></image>
+              <image class="icon_img" wx:if="{{userInfo.userLevel === '执法新兵'}}" src="/assets/images/level/新兵.png"></image>
+              <image class="icon_img" wx:if="{{userInfo.userLevel === '执法骨干'}}" src="/assets/images/level/骨干.png"></image>
+              <image class="icon_img" wx:if="{{userInfo.userLevel === '执法专家'}}" src="/assets/images/level/专家.png"></image>
+              <image class="icon_img"  wx:if="{{userInfo.userLevel === '执法先锋'}}" src="/assets/images/level/先锋.png"></image>
             </view>
             <view class="identity_name">{{userInfo.userLevel}}</view>
           </view>
