--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -42,7 +42,7 @@
     <view class="entry_list">
       <view class="pk-entry" wx:if="{{showHonor}}" data-type="honor" bindtap="go">
           <image class="pk-entry_img" src="/assets/images/honor/honor.png"></image>
-          <view class="pk-entry_text">荣耀墙</view>
+          <view class="pk-entry_text">荣誉墙</view>
       </view>
       <view class="pk-entry" wx:else data-type="fight" bindtap="go">
           <image class="pk-entry_img" src="/assets/images/dz.png"></image>
