--- a/pages/week/index.wxml
+++ b/pages/week/index.wxml
@@ -9,10 +9,11 @@
                     </view>
                     <view class="info pr5">
                         <view class="name overeli fw900">{{meInfo.name}}</view>
-                        <view class="rank pr" wx:if="{{meInfo.roleType === '2'}}">
+                        <level wx:if="{{meInfo.roleType === '2'}}" level="{{meInfo.userLevel}}"></level>
+                        <!-- <view class="rank pr" wx:if="{{meInfo.roleType === '2'}}">
                             <image src="/assets/images/grading.png" alt="" srcset=""></image>
                             <view class="level">{{meInfo.userLevel}}</view>
-                        </view>
+                        </view> -->
                     </view>
                 </view>
             </view>
