--- a/pages/fight/index.wxss
+++ b/pages/fight/index.wxss
@@ -159,6 +159,7 @@
 }
 .fight-box .fight .topic-box {
   flex: 1;
+  height: 0;
   background: #ffffff;
   width: 100%;
   border-radius: 20rpx 20rpx 0 0;
