--- a/pages/record/record.wxml
+++ b/pages/record/record.wxml
@@ -46,7 +46,7 @@
         <view wx:if="{{checkedType !== 'matching'}}" class="record__item__block3 less">{{item.trainPoint>=0?('+'+item.trainPoint):item.trainPoint}}积分</view>
         <view wx:if="{{checkedType === 'matching'}}" class="record__item__block3 less">{{item.trainResult}}</view>
       </view>
-      <view wx:if="{{recordData.length === 0}}" class="nodata">暂无数据</view>
+      <view wx:if="{{recordData.length === 0}}" class="nodata">积分统计中</view>
     </view>
   </view>
 </view>
