--- a/pages/fight/index.less
+++ b/pages/fight/index.less
@@ -78,6 +78,7 @@
         width: 100%;
         overflow: hidden;
         .both {
+            height: 20%;
             .me-box,.rival-box {
                 width: 100%;
                 height: 110rpx;
@@ -137,7 +138,7 @@
             }
         }
         .topic-box {
-            flex: 1;
+            height: 80%;
             background: #ffffff;
             width: 100%;
             border-radius: 20rpx 20rpx 0 0;
@@ -158,10 +159,15 @@
                     bottom: 70rpx;
                     left: 40rpx;
                 }
+                .name {
+                    padding: 0 40rpx 18rpx;
+                    height: 40rpx;
+                    line-height: 40rpx;
+                }
             }
             .topic {
                 color: #525053;
-                flex: 1;
+                max-height: 64%;
                 width: 100%;
                 padding: 0 20rpx;
                 overflow-y: auto;
@@ -216,7 +222,7 @@
                 }
             }
             .topic-footer {
-                height: 200rpx;
+                height: 120rpx;
                 padding: 20rpx 0;
                 .sub {
                     background-color: #46d7b6;
