--- a/components/dialog-tips/dialog-tips.wxss
+++ b/components/dialog-tips/dialog-tips.wxss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 999999999;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 999999999;
 }
 .dialog-tips__content__icon{
   width: 150rpx;
