每周一测优化

--- a/pages/week/index.less
+++ b/pages/week/index.less
@@ -134,7 +134,7 @@
                 color: #525053;
                 flex: 1;
                 width: 100%;
-                padding: 0 20rpx;
+                padding: 0 20rpx 20rpx;
                 overflow-y: auto;
                 .subject {
                     padding: 0 20rpx;
