排行榜修改

--- a/components/ranking-table/ranking-table.wxml
+++ b/components/ranking-table/ranking-table.wxml
@@ -10,11 +10,11 @@
   <view class="ranking-table__content">
     <view class="ranking-table__content__item" wx:for="{{data}}" wx:key='index' wx:for-index='_index'>
       <view class="content__item__block" wx:for="{{cloumn}}" wx:for-item="_item"  wx:key='index'>
-        <block wx:if="{{_item === 'id'}}">
-          <image wx:if="{{_index === 0}}" src="/assets/images/first.jpg"></image>
-          <image wx:elif="{{_index === 1}}" src="/assets/images/second.jpg"></image>
-          <image wx:elif="{{_index === 2}}" src="/assets/images/third.jpg"></image>
-          <text wx:else>{{_index + 1}}</text>
+        <block wx:if="{{_item == 'rank'}}">
+          <image wx:if="{{item[_item] == 1}}" src="/assets/images/first.jpg"></image>
+          <image wx:elif="{{item[_item] == 2}}" src="/assets/images/second.jpg"></image>
+          <image wx:elif="{{item[_item]== 3}}" src="/assets/images/third.jpg"></image>
+          <text wx:else>{{item[_item]}}</text>
         </block>
         <text wx:else>{{item[_item]}}</text>
       </view>
